# rts-rovers

./: .gitignore  ARCHITECTURE.md  MEMORY_BANK.md  README.md  TASK_LIST.md  UI_DESIGN.md  challenge_statement.md
data/: README.md
emulator/: rover_emulator.cpp
memory-bank/: README.md  activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
visualization/: CMakeLists.txt  README.md
visualization/include/: TimeUtil.h  common.h
visualization/src/: main.cpp
visualization/src/core/: Application.cpp  Application.h  Timer.cpp  Timer.h
visualization/src/data/: DataManager.cpp  DataManager.h  PointCloud.cpp  PointCloud.h  RoverData.cpp  RoverData.h
visualization/src/network/: PacketParser.cpp  PacketParser.h  UDPReceiver.cpp  UDPReceiver.h
visualization/src/pathfinding/: AStar.cpp  AStar.h  PathRenderer.cpp  PathRenderer.h
visualization/src/render/: Camera.cpp  Camera.h  CircleRenderer.cpp  CircleRenderer.h  PointCloudRenderer.cpp  PointCloudRenderer.h  Renderer.cpp  Renderer.h  RoverRenderer.cpp  RoverRenderer.h  Shader.cpp  Shader.h  TerrainRenderer.cpp  TerrainRenderer.h
visualization/src/terrain/: TerrainOperation.cpp  TerrainOperation.h  TerrainRaycast.cpp  TerrainRaycast.h
visualization/src/ui/: SciFiTheme.cpp  SciFiTheme.h  UIManager.cpp  UIManager.h
